--- a/src/main/resources/templates/admin/assign-project.html
+++ b/src/main/resources/templates/admin/assign-project.html
@@ -15,6 +15,10 @@
       <ul>
         <li><a th:href="@{/admin/dashboard}"><span></span>Oversigt</a></li>
         <li><a th:href="@{/admin/projects}" class="active"><span></span>Projekter</a></li>
+        <li><a th:href="@{/admin/accounting}"><span><svg viewBox="0 0 24 24">
+                <path
+                  d="M11.5 2C6.81 2 3 5.81 3 10.5S6.81 19 11.5 19h.5v3c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-3h1c4.69 0 8.5-3.81 8.5-8.5S16.19 2 11.5 2zm0 14.5c-2.48 0-4.5-2.02-4.5-4.5S9.02 7.5 11.5 7.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5z" />
+              </svg></span>Regnskab</a></li>
         <li><a th:href="@{/admin/employees}"><span></span>Medarbejdere</a></li>
         <li><a th:href="@{/admin/settings}"><span></span>Indstillinger</a></li>
         <li class="logout-item">
